<resources>
    <string name="app_name">Виселица</string>
    <string name="rules">Правила</string>
    <string name="choose">Выбор категории</string>
    <string name="settings">Настройки</string>

    <string name="text1">1. Игрок выбирает категорию слов, из которой будет загадываться слово.</string>
    <string name="text2">2. На экране отображается скрытое слово, представленное пустыми местами для каждой буквы.</string>
    <string name="text3">3. Игрок начинает угадывать буквы, предлагая свои варианты. Он может выбрать букву, которая, по его мнению, входит в загаданное слово.</string>
    <string name="text4">4. Если предложенная буква есть в загаданном слове, она открывается на соответствующем месте. Если буква повторяется в слове, то все ее вхождения также открываются.</string>
    <string name="text5">5. Если предложенная буква не входит в загаданное слово, то отнимается одна жизнь у игрока. У игрока всего 10 жизней (неправильных выборов буквы).</string>
    <string name="text6">6. Игрок продолжает угадывать буквы и открывать их на соответствующих местах в слове до тех пор, пока не угадает все буквы или не исчерпает все свои жизни.</string>
    <string name="text7">7. Если игрок угадывает все буквы в слове, он побеждает и переходит к следующему слову в выбранной категории.</string>
    <string name="text8">8. Если игрок исчерпывает все свои жизни, он проигрывает и может начать игру заново с выбранной категорией.</string>
    <string name="text9">9. В игре доступны различные категории слов для выбора, что позволяет игроку разнообразить игровой процесс.</string>


    <string-array name="animals25">
        <item>собака</item>
        <item>крокодил</item>
        <item>кенгуру</item>
        <item>горилла</item>
        <item>ворона</item>
        <item>гиббон</item>
        <item>леопард</item>
        <item>орангутанг</item>
        <item>гепард</item>
        <item>носорог</item>
        <item>капибара</item>
        <item>белуга</item>
        <item>панда</item>
        <item>фламинго</item>
        <item>тюлень</item>
        <item>кашалот</item>
        <item>гиена</item>
        <item>манул</item>
        <item>пеликан</item>
        <item>комароватка</item>
        <item>мандрил</item>
        <item>кенгуру</item>
        <item>сурикат</item>
    </string-array>
    
    
    <string-array name="flora">
        <item>Гора</item>
        <item>Водопад</item>
        <item>Пустыня</item>
        <item>Ледник</item>
        <item>Каньон</item>
        <item>Пещера</item>
        <item>Коралл</item>
        <item>Ущелье</item>
        <item>Полярник</item>
        <item>Саванна</item>
        <item>Степь</item>
        <item>Тундра</item>
        <item>Долина</item>
        <item>Вулкан</item>
        <item>Скала</item>
        <item>Оазис</item>
        <item>Плато</item>
        <item>Песчаник</item>
        <item>Минерал</item>
        <item>Кварцит</item>
        <item>Хребет</item>
        <item>Океан</item>
        <item>Гранит</item>
        <item>Корень</item>
        <item>Валун</item>
        <item>Замерзь</item>
        <item>Порода</item>
        <item>Сосна</item>
        <item>Берёза</item>
        <item>Орех</item>
        <item>Липа</item>
        <item>Ясень</item>
        <item>Клён</item>
        <item>Тополь</item>
        <item>Акация</item>
        <item>Груша</item>
        <item>Яблоня</item>
        <item>Вишня</item>
        <item>Каштан</item>
        <item>Кипарис</item>
        <item>Олива</item>
        <item>Абрикос</item>
        <item>Мандарин</item>
        <item>Кедр</item>
        <item>Мята</item>
        <item>Хвойник</item>
        <item>Секвойя</item>
        <item>Пихта</item>
        <item>Апельсин</item>
        <item>Лимон</item>
        <item>Каштан</item>
        <item>Слива</item>
    </string-array>

    <string-array name="countryArray">
        <item>Австралия</item>
        <item>Австрия</item>
        <item>Албания</item>
        <item>Алжир</item>
        <item>Ангола</item>
        <item>Аргентина</item>
        <item>Армения</item>
        <item>Бангладеш</item>
        <item>Беларусь</item>
        <item>Белиз</item>
        <item>Бельгия</item>
        <item>Болгария</item>
        <item>Боливия</item>
        <item>Бразилия</item>
        <item>Венгрия</item>
        <item>Венесуэла</item>
        <item>Вьетнам</item>
        <item>Габон</item>
        <item>Гаити</item>
        <item>Гана</item>
        <item>Гватемала</item>
        <item>Германия</item>
        <item>Греция</item>
        <item>Грузия</item>
        <item>Дания</item>
        <item>Доминикана</item>
        <item>Египет</item>
        <item>Израиль</item>
        <item>Индия</item>
        <item>Индонезия</item>
        <item>Иордания</item>
        <item>Ирак</item>
        <item>Иран</item>
        <item>Ирландия</item>
        <item>Исландия</item>
        <item>Испания</item>
        <item>Италия</item>
        <item>Казахстан</item>
        <item>Камбоджа</item>
        <item>Камерун</item>
        <item>Канада</item>
        <item>Кения</item>
        <item>Колумбия</item>
        <item>Корея</item>
        <item>Куба</item>
        <item>Латвия</item>
        <item>Литва</item>
        <item>Люксембург</item>
        <item>Мадагаскар</item>
        <item>Малайзия</item>
        <item>Мали</item>
        <item>Мексика</item>
        <item>Мозамбик</item>
        <item>Молдова</item>
        <item>Монголия</item>
        <item>Марокко</item>
        <item>Намибия</item>
        <item>Непал</item>
        <item>Нигер</item>
        <item>Нигерия</item>
        <item>Нидерланды</item>
        <item>Норвегия</item>
        <item>Пакистан</item>
        <item>Панама</item>
        <item>Парагвай</item>
        <item>Перу</item>
        <item>Польша</item>
        <item>Португалия</item>
        <item>Руанда</item>
        <item>Россия</item>
        <item>Румыния</item>
        <item>Сальвадор</item>
        <item>Сан-Марино</item>
        <item>Сенегал</item>
        <item>Сербия</item>
        <item>Сингапур</item>
        <item>Сирия</item>
        <item>Словакия</item>
        <item>Словения</item>
        <item>Сомали</item>
        <item>Судан</item>
        <item>Суринам</item>
        <item>Таджикистан</item>
        <item>Таиланд</item>
        <item>Тайвань</item>
        <item>Танзания</item>
        <item>Того</item>
        <item>Тунис</item>
        <item>Туркменистан</item>
        <item>Турция</item>
        <item>Уганда</item>
        <item>Узбекистан</item>
        <item>Украина</item>
        <item>Уругвай</item>
        <item>Филиппины</item>
        <item>Финляндия</item>
        <item>Франция</item>
        <item>Хорватия</item>
        <item>Чад</item>
        <item>Чехия</item>
        <item>Чили</item>
        <item>Швейцария</item>
        <item>Швеция</item>
        <item>Эквадор</item>
        <item>Эстония</item>
        <item>Ямайка</item>
        <item>Япония</item>
    </string-array>
    
    <string-array name="foodArray">
        <item>Анчоусы</item>
        <item>Артишоки</item>
        <item>Аспержес</item>
        <item>Багет</item>
        <item>Барбарис</item>
        <item>Бастурма</item>
        <item>Бекон</item>
        <item>Бисквит</item>
        <item>Блин</item>
        <item>Брокколь</item>
        <item>Брускетта</item>
        <item>Булгур</item>
        <item>Бургер</item>
        <item>Вареник</item>
        <item>Вафля</item>
        <item>Винегрет</item>
        <item>Виноград</item>
        <item>Гамбургер</item>
        <item>Голубцы</item>
        <item>Гранат</item>
        <item>Грейпфрут</item>
        <item>Гренка</item>
        <item>Гриб</item>
        <item>Груша</item>
        <item>Долма</item>
        <item>Дорадо</item>
        <item>Драге</item>
        <item>Дюкан</item>
        <item>Ежевика</item>
        <item>Жаркое</item>
        <item>Земляника</item>
        <item>Зефир</item>
        <item>Икра</item>
        <item>Инжир</item>
        <item>Йогурт</item>
        <item>Кабачок</item>
        <item>Капкейк</item>
        <item>Карамель</item>
        <item>Карбонара</item>
        <item>Картошка</item>
        <item>Кекс</item>
        <item>Кетчуп</item>
        <item>Клубника</item>
        <item>Кокос</item>
        <item>Колбаса</item>
        <item>Котлеты</item>
        <item>Креветка</item>
        <item>Крендель</item>
        <item>Кроассан</item>
        <item>Круассан</item>
        <item>Кукуруза</item>
        <item>Кускус</item>
        <item>Лагман</item>
        <item>Лазанья</item>
        <item>Лимонад</item>
        <item>Лосось</item>
        <item>Манго</item>
        <item>Мармелад</item>
        <item>Маффин</item>
        <item>Медовик</item>
        <item>Миндаль</item>
        <item>Мохито</item>
        <item>Мюсли</item>
        <item>Нуга</item>
        <item>Овсянка</item>
        <item>Окрошка</item>
        <item>Оливки</item>
        <item>Панини</item>
        <item>Паста</item>
        <item>Паэлья</item>
        <item>Персик</item>
        <item>Печенье</item>
        <item>Пицца</item>
        <item>Пирог</item>
        <item>Пломбир</item>
        <item>Помидор</item>
        <item>Попкорн</item>
        <item>Прошутто</item>
        <item>Пудинг</item>
        <item>Рагу</item>
        <item>Рататуй</item>
        <item>Ризотто</item>
        <item>Рулет</item>
        <item>Салат</item>
        <item>Салмон</item>
        <item>Сашими</item>
        <item>Свекла</item>
        <item>Сироп</item>
        <item>Сливки</item>
        <item>Сорбет</item>
        <item>Сосиска</item>
        <item>Спагетти</item>
        <item>Стейк</item>
        <item>Суши</item>
        <item>Табуле</item>
        <item>Тако</item>
        <item>Творог</item>
        <item>Тирамису</item>
        <item>Торт</item>
        <item>Трюфель</item>
        <item>Устрица</item>
        <item>Фарш</item>
        <item>Фондю</item>
        <item>Фрикаделька</item>
        <item>Фриттата</item>
        <item>Халва</item>
        <item>Хамон</item>
        <item>Хумус</item>
        <item>Цуккини</item>
        <item>Чай</item>
        <item>Чебурек</item>
        <item>Чизкейк</item>
        <item>Чипсы</item>
        <item>Шаверма</item>
        <item>Шашлык</item>
        <item>Шоколад</item>
        <item>Яблоко</item>
        <item>Ягода</item>
        <item>Яйцо</item>
    </string-array>

</resources>