<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesActivity">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/halogen"
        android:text="@string/rules"
        android:textColor="@color/black"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundImageView" />

    <ImageButton
        android:id="@+id/btnBackRules"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="108dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/r1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/halogen"
                android:text="@string/text1"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/r2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/halogen"
                android:text="@string/text2"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/r3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/halogen"
                android:text="@string/text3"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/r4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/halogen"
                android:text="@string/text4"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/r5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/halogen"
                android:text="@string/text5"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/r6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/halogen"
                android:text="@string/text6"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/r7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/halogen"
                android:text="@string/text7"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/r8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/halogen"
                android:text="@string/text8"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/r9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/halogen"
                android:text="@string/text9"
                android:textColor="@color/black"
                android:textSize="25dp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>